# beancount-toolbox

./: .devcontainer.json  .gitignore  MANIFEST.in  Makefile  README.md  package-lock.json  package.json  pyproject.toml  requirements.in  requirements.txt
.github/: renovate.json
.github/workflows/: ci.yaml
beancount_toolbox/: importers.py  tag_component.py  utils.py  web.py  zero_duplication.py
beancount_toolbox/cli/: export.py
beancount_toolbox/cli/rofi/: __init__.py
beancount_toolbox/data/: beancount-toolbox-export-schema.json  calendar.rasi
beancount_toolbox/ext/budget_plan/: BudgetPlan.js  __init__.py
beancount_toolbox/ext/budget_plan/frontend/: index.tsx
beancount_toolbox/ext/budget_plan/templates/: BudgetPlan.html
beancount_toolbox/ext/portfolio_monitor/: __init__.py  weight_allocation.py  weight_conversion.py  weight_parsing.py
beancount_toolbox/ext/portfolio_monitor/templates/: PortfolioMonitor.html
beancount_toolbox/importers/: __init__.py  categorizer.py  deprecated.py  dkb.py
beancount_toolbox/plugins/: auto_depreciation.py  documents.py  filter_tags.py  leafonly.py  prices.py  spread_pad.py
scripts/: setup.sh
tests/: _helper.py  conftest.py  test_documents.py  test_leafonly.py  test_spread_pad.py  test_tag_component.py  test_utils.py
tests/cli/: test_export.py
tests/ext/: _portfolio_test_helpers.py  test_portfolio_monitor_exclude.py  test_portfolio_monitor_last_price.py  test_portfolio_monitor_weights.py  test_portfolio_weight_parsing.py
tests/fixtures/: dkb_mortgage.csv  dkb_sample.csv  dkb_updated.csv  dkb_whitespace.csv
tests/fixtures/example/: start.bean
tests/fixtures/export/: example.bean  export2.yaml
tests/fixtures/prices/: BTC-2.csv
tests/fixtures/prices/invalid/: BTC.csv
tests/fixtures/prices/valid/: A.B.C.csv  BONDS.csv  BTC.csv
tests/importers/: __init__.py  test_dkb.py
tests/plugins/: test_auto_depreciation.py  test_documents.py  test_filter_tags.py  test_leafonly.py  test_prices.py  test_spread_pad.py
