[project]
name = "beancount-toolbox"
dynamic = ["version","dependencies"]
requires-python = ">=3.11"
maintainers = [
  {name = "Sebastian Schulz", email = "16666034+seb-schulz@users.noreply.github.com"}
]
[project.scripts]
bean-rofi = "beancount_toolbox.cli.rofi:main"
bean-check = "beancount.scripts.check:main"
bean-format = "beancount.scripts.format:main"
bean-query = "beancount.query.shell:main"
bean-web = "beancount_toolbox.cli.web:main"
bean-export = "beancount_toolbox.cli.export:main"
fava = "fava.cli:main"

[tool.pytest.ini_options]
pythonpath = "."

[tool.setuptools.dynamic]
version = {attr = "beancount_toolbox.__version__"}
dependencies = {file = "requirements.txt"}
