[project]
name = "beancount-toolbox"
version = "2.0.0a2"
requires-python = ">=3.12"
maintainers = [{ name = "Sebastian Schulz", email = "16666034+seb-schulz@users.noreply.github.com" }]
dependencies = [
    "beancount>=2.3,<3.0",
    "beancount-reds-plugins",
    "pyyaml",
    "pydantic",
    "fava",
    "bottle<0.13",
    "beanquery<0.2.0",
    "tatsu<5.8.0",
]
[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[project.scripts]
bean-check = "beancount.scripts.check:main"
bean-format = "beancount.scripts.format:main"
bean-query = "beancount.query.shell:main"
bean-export = "beancount_toolbox.cli.export:main"
fava = "fava.cli:main"

[tool.pytest.ini_options]
pythonpath = "."

[tool.uv]
package = true

[tool.setuptools]
packages = ["beancount_toolbox"]

[tool.setuptools.package-data]
"beancount_toolbox" = [
  "beancount_toolbox/ext/**/templates/*.html",
  "beancount_toolbox/ext/**/*.js",
  "beancount_toolbox/data/**",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
