[project]
name = "beancount-toolbox"
version = "2.0.0b1"
requires-python = ">=3.12"
maintainers = [{ name = "Sebastian Schulz", email = "16666034+seb-schulz@users.noreply.github.com" }]
dependencies = [
    "beancount==3.2.0",
    "beancount-reds-plugins==0.4.0",
    "pyyaml==6.0.3",
    "pydantic==2.12.4",
    "fava==1.30.7",
    "bottle==0.12.25,<0.13",
    "beanquery==0.2.0",
]
[dependency-groups]
dev = [
  "pytest",
  "ruff",
]

[project.scripts]
bean-check = "beancount.scripts.check:main"
bean-format = "beancount.scripts.format:main"
bean-query = "beanquery.shell:main"
fava = "fava.cli:main"

[tool.pytest.ini_options]
pythonpath = "."

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["beancount_toolbox*"]

[tool.setuptools.package-data]
"beancount_toolbox" = [
  "ext/**/templates/*.html",
  "ext/**/*.js",
  "data/**",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
